crates/cypher-plan/tests/snapshots/serde_pretty__json_source_all.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "op": "source"
    }
  ],
  "var_map": [],
  "write_ops": []
}
