crates/cypher-plan/tests/snapshots/serde_pretty__json_union_distinct.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "label": [
        "Person"
      ],
      "op": "source"
    },
    {
      "bind": 1,
      "label": [
        "Robot"
      ],
      "op": "source"
    },
    {
      "kind": "distinct",
      "left": 0,
      "op": "union",
      "right": 1
    }
  ],
  "var_map": [],
  "write_ops": []
}
